--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -91,6 +91,7 @@
 					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
                     <li><a href="{{ site.url }}/tags/">Web 개발</a></li>
+                    <li><a href="{{ site.url }}/tags/">운영</a></li>
 				</ul>
 			</li>
 			{% for link in site.data.navigation %}
