--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -16,8 +16,8 @@ layout: compress
     <header class="header" role="banner">
         <div class="wrapper animated fadeIn">
             <div class="content">
-                <div class="operation-title">
-                    <h1>{{ operation.title }}</h1>
+                <div class="post-title">
+                    <h1>{{ page.title }}</h1>
                     <a class="btn zoombtn" href="{{site.url}}">
                         <i class="fa fa-home"></i>
                     </a>
