--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -23,7 +23,7 @@ layout: compress
                 </div>
                 <div class="post-list">
                     {% for operation in site.operations %} 
-                        {% if post.project == null %}
+                        {% if operation.project == null %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
                             <a class="zoombtn" href="{{ site.url }}{{ operation.url }}">{{ operation.title }}</a>
