--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -22,7 +22,7 @@ layout: compress
                     </a>
                 </div>
                 <div class="post-list">
-                    {% for operation in site.operation %} 
+                    {% for operation in site.Operations %} 
                         {% if operation.project == null %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
