--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -22,6 +22,7 @@ layout: compress
                     </a>
                 </div>
                 <div class="post-list">
+                    ttttttttttttttttttttttttttttttttttttt
                     {% for operation in site.Operations %} 
                         {% if operation.project == null %}
                     <ul>
