--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -37,6 +37,11 @@ layout: compress
                    ttststse
                     {% endfor %}
                 </div>
+                dfdfdf
+                {% for operation in site.operations %} 
+                <a href="#">dddd</a>
+                {% endfor %}
+                
             </div>
         </div>
     </header>
