--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -38,7 +38,7 @@ layout: compress
                     {% endfor %}
                 </div>
                 dfdfdf
-                {{ site }}
+                {{ site }} aktkddp
                 {% for operation in site.operations %} 
                 <a href="#">dddd</a>
                 {% endfor %}
