--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -38,7 +38,8 @@ layout: compress
                     {% endfor %}
                 </div>
                 dfdfdf
-                {{ site }} aktkddp
+                {{ site.Operations }} aktkddp
+                 {{ site.operation }} aktkddp
                 {% for operation in site.operations %} 
                 <a href="#">dddd</a>
                 {% endfor %}
