--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -23,7 +23,7 @@ layout: compress
                 </div>
                 <div class="post-list">
                    
-                    {% for operation in site.Operations %} 
+                    {% for operation in site.posts %} 
                         {% if operation.project == null %}
                      ttttttttttttttttttttttttttttttttttttt
                     <ul>
