--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -21,8 +21,8 @@ layout: compress
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
-                <div class="post-list">22
-                    {% for post in site.operation %} 
+                <div class="post-list">2233
+                    {% for post in site.operations %} 
                              gksrmfdldksTJwu
                     {% endfor %}
                 </div>
