--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -21,10 +21,12 @@ layout: compress
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
-                <div class="post-list">2233
-                    {% for post in site.operations %} 
-                             gksrmfdldksTJwu
-                    {% endfor %}
+                <div class="post-list">44455
+                    {{ site.posts.operation }}
+                     {{ site.posts.operations }}
+                     {{ site.posts.Operation }}
+                    {{ site.posts.Operations }}
+                    {{ site.posts.Operation }}
                 </div>
             </div>
         </div>
