--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,10 @@ layout: compress
                          Posts
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Projects
+                         
+                         </a>
+                        <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         운영업무
                          </a>
                  </h3>
             </div>
