--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,7 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
                          
                          </a>
-                        <a class="btn zoombtn" href="{{ site.url }}/projects">
+                        <a class="btn zoombtn" href="{{ site.url }}/operations">
                          운영업무
                          </a>
                  </h3>
