--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@ layout: compress
                          
                          </a>
                         <a class="btn zoombtn" href="{{ site.url }}/operations">
-                         운영업무
+                         operations
                          </a>
                  </h3>
             </div>
