--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,10 +36,9 @@ layout: compress
                          About
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
+                         Posts1
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         
                          </a>
                         <a class="btn zoombtn" href="{{ site.url }}/operations">
                          operations
