--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,12 +36,13 @@ layout: compress
                          About
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts1
+                         Posts
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
+                          Projects
                          </a>
                         <a class="btn zoombtn" href="{{ site.url }}/operations">
-                         operations
+                         Operations
                          </a>
                  </h3>
             </div>
