--- a/_layouts/operation-list.html
+++ b/_layouts/operation-list.html
@@ -21,8 +21,7 @@ layout: compress
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
-                <div class="post-list">9
-
+                <div class="post-list">
                 </div>
             </div>
         </div>
