--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,7 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
                           Projects
                          </a>
-                        <a class="btn zoombtn" href="{{ site.url }}/ Operations1"> 
+                        <a class="btn zoombtn" href="{{ site.url }}/ Operations"> 
                          Operations
                          </a>
                  </h3>
