--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,18 +32,21 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
-                         About
-                         </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
-                         </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
-                          Projects
-                         </a>
-                        <a class="btn zoombtn" href="{{ site.url }}/ operations"> 
-                         Operations
-                         </a>
+                    <a class="btn zoombtn" href="{{ site.url }}/about">
+                    About
+                    </a>
+                    <a class="btn zoombtn" href="{{ site.url }}/projects">
+                    Posts
+                    </a>
+                    <a class="btn zoombtn" href="{{ site.url }}/operations">
+                    Projects
+                    </a>
+                    <a class="btn zoombtn" href="{{ site.url }}/Portfolio"> 
+                    Portfolio
+                    </a>
+                    <a class="btn zoombtn" href="{{ site.url }}/Study"> 
+                    Study
+                    </a>
                  </h3>
             </div>
         </div>
